--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,23 +10,30 @@
 <body>
     <nav>
         <img src="" alt="">
-      <ul>
-        <li><a href="">Acceuil</a></li>
-        <li><a href="">Acceuil</a></li>
-        <li><a href="">Acceuil</a></li>
-        <li><a href="">Acceuil</a></li>
-      </ul>
-      <ul>
-        <li>btn</li>
-        <li>btn</li>
-        <li>btn</li>
-        <li>btn</li>
-        <li>btn</li>
-      </ul>
+        <div>
+            <img src="" alt="logo site web">
+            <label for="">
+                <input type="text">
+            </label>
+            <select name="devises" id=""></select>
+            <select name="langue" id=""></select>
+            <a href="">Messagerie</a>
+            <a href="">Enregistrement</a>
+            <a href="">Connection</a>
+        </div>
+        <ul>
+            <li><a href="">Enchères du moment</a></li>
+            <li><a href="">Actualités</a></li>
+            <li><a href="">Coup de coeur du lord</a></li>
+            <li><a href="">Archives</a></li>
+        </ul>
+        <input type="checkbox" name="menu-mobile" id="">
     </nav>
     <main>
         <section class="galerie">
             <h2>Catalogue produits</h2>
+            <input type="checkbox" name="format-carte" id="">
+            <input type="checkbox" name="format-carte" id="">
             <article class="carte">
                 <img src="" alt="">
                 <h3>nom du timbres</h3>
@@ -40,7 +48,10 @@
             </article>
         </section>
         <aside>
-</aside>
+            <h2>Filtres</h2>
+            <h3>État timbre</h3>
+            
+        </aside>
 
     </main>
     <footer>
@@ -76,4 +87,5 @@
         </div>
     </footer>
 </body>
+
 </html>
