add main footer content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
                 <input type="text">
             </label>
             <select name="devises" id=""></select>
-            <select name="langue" id=""></select>
+            <select name="langues" id=""></select>
             <a href="">Messagerie</a>
             <a href="">Enregistrement</a>
             <a href="">Connection</a>
@@ -33,59 +33,206 @@
         <section class="galerie">
             <h2>Catalogue produits</h2>
             <input type="checkbox" name="format-carte" id="">
-            <input type="checkbox" name="format-carte" id="">
-            <article class="carte">
-                <img src="" alt="">
-                <h3>nom du timbres</h3>
-                <p>numéro de lot : </p>
-                <p>temps restant : </p>
-                <p>Prix actuel : </p>
+            <input type="checkbox" name="format-liste" id="">
+            <article class="timbre">
+                <div class="img-avec-favoris">
+                    <img class="timbre-image" src="" alt="">
+                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-status">Enchères en cours</p>
+                    <p class="timbre-lot">Lot n: 123456</p>
+                </div>
+                <div class="entete-enchere">
+                    <h3 class="timbre-titre">nom du timbres</h3>
+                    <p class="timbre-annee">1850-1890</p>
+                    <p class="timbre-etat">État : Neuf</p>
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-prix" >Prix actuel : </p>
+                    <p class="timbre-temps-restant">temps restant : </p>
+                </div>
                 <form action="">
                     <label for="">
                         <input type="text" name="Prix">
                     </label>
+                    <input type="submit" value="">
+                </form>
+            </article>
+            <article class="timbre">
+                <div class="img-avec-favoris">
+                    <img class="timbre-image" src="" alt="">
+                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-status">Enchères en cours</p>
+                    <p class="timbre-lot">Lot n: 123456</p>
+                </div>
+                <div class="entete-enchere">
+                    <h3 class="timbre-titre">nom du timbres</h3>
+                    <p class="timbre-annee">1850-1890</p>
+                    <p class="timbre-etat">État : Neuf</p>
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-prix" >Prix actuel : </p>
+                    <p class="timbre-temps-restant">temps restant : </p>
+                </div>
+                <form action="">
+                    <label for="">
+                        <input type="text" name="Prix">
+                    </label>
+                    <input type="submit" value="">
+                </form>
+            </article>
+            <article class="timbre">
+                <div class="img-avec-favoris">
+                    <img class="timbre-image" src="" alt="">
+                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-status">Enchères en cours</p>
+                    <p class="timbre-lot">Lot n: 123456</p>
+                </div>
+                <div class="entete-enchere">
+                    <h3 class="timbre-titre">nom du timbres</h3>
+                    <p class="timbre-annee">1850-1890</p>
+                    <p class="timbre-etat">État : Neuf</p>
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-prix" >Prix actuel : </p>
+                    <p class="timbre-temps-restant">temps restant : </p>
+                </div>
+                <form action="">
+                    <label for="">
+                        <input type="text" name="Prix">
+                    </label>
+                    <input type="submit" value="">
+                </form>
+            </article>
+            <article class="timbre">
+                <div class="img-avec-favoris">
+                    <img class="timbre-image" src="" alt="">
+                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-status">Enchères en cours</p>
+                    <p class="timbre-lot">Lot n: 123456</p>
+                </div>
+                <div class="entete-enchere">
+                    <h3 class="timbre-titre">nom du timbres</h3>
+                    <p class="timbre-annee">1850-1890</p>
+                    <p class="timbre-etat">État : Neuf</p>
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-prix" >Prix actuel : </p>
+                    <p class="timbre-temps-restant">temps restant : </p>
+                </div>
+                <form action="">
+                    <label for="">
+                        <input type="text" name="Prix">
+                    </label>
+                    <input type="submit" value="">
+                </form>
+            </article>
+            <article class="timbre">
+                <div class="img-avec-favoris">
+                    <img class="timbre-image" src="" alt="">
+                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-status">Enchères en cours</p>
+                    <p class="timbre-lot">Lot n: 123456</p>
+                </div>
+                <div class="entete-enchere">
+                    <h3 class="timbre-titre">nom du timbres</h3>
+                    <p class="timbre-annee">1850-1890</p>
+                    <p class="timbre-etat">État : Neuf</p>
+                </div>
+                <div class="txt-enchere-ligne">
+                    <p class="timbre-prix" >Prix actuel : </p>
+                    <p class="timbre-temps-restant">temps restant : </p>
+                </div>
+                <form action="">
+                    <label for="">
+                        <input type="text" name="Prix">
+                    </label>
+                    <input type="submit" value="">
                 </form>
             </article>
         </section>
         <aside>
-            <h2>Filtres</h2>
-            <h3>État timbre</h3>
-            
         </aside>
 
     </main>
-    <footer>
-        <div>
-            <h2>coloun nav</h2>
-            <ul>
-                <li><a href="">liens</a></li>
-                <li><a href="">liens</a></li>
-                <li><a href="">liens</a></li>
-                <li><a href="">liens</a></li>
-                <li><a href="">liens</a></li>
-            </ul>
-            <div>
-                <h2>coloun nav</h2>
+    <footer id="pied-page">
+        <div class="plan-de-site">
+            <div class="titre-liste">
+                <h2>Acheter</h2>
                 <ul>
-                    <li><a href="">liens</a></li>
-                    <li><a href="">liens</a></li>
-                    <li><a href="">liens</a></li>
-                    <li><a href="">liens</a></li>
-                    <li><a href="">liens</a></li>
+                    <li><a href="">État-Unis</a></li>
+                    <li><a href="">Afrique</a></li>
+                    <li><a href="">Asie</a></li>
+                    <li><a href="">Europe</a></li>
+                    <li><a href="">Russie</a></li>
+                    <li><a href="">Commonwealth Britannique</a></li>
+                    <li><a href="">Monde entier</a></li>
                 </ul>
             </div>
-            <div>
-                <h2>coloun nav</h2>
+            <div class="titre-liste">
+                <h2>Services et ressources</h2>
                 <ul>
-                    <li><a href="">liens</a></li>
-                    <li><a href="">liens</a></li>
-                    <li><a href="">liens</a></li>
-                    <li><a href="">liens</a></li>
-                    <li><a href="">liens</a></li>
+                    <li><a href="">Vendre vos timbre</a></li>
+                    <li><a href="">Faire estimer vos timbres</a></li>
+                    <li><a href="">Contacter un spécialiste</a></li>
+                    <li><a href="">Embaucher un homme de milieu</a></li>
+                    <li><a href="">Évènement caritative</a></li>
+                    <li><a href="">Magasins</a></li>
+                    <li><a href="">Évènement prochains</a></li>
                 </ul>
+            </div>
+            <div class="titre-liste">
+                <h2>Centre d'aide</h2>
+                <ul>
+                    <li><a href="">Profil</a></li>
+                    <li><a href="">Comment faire une offre</a></li>
+                    <li><a href="">Suivre une enchère</a></li>
+                    <li><a href="">Trouver l'enchère désirée</a></li>
+                </ul>
+            </div>
+            <div class="titre-liste">
+                <h2>Contactez-nous</h2>
+                <ul>
+                    <li><a href="">Anglettere</a></li>
+                    <li><a href="">Les Amériques</a></li>
+                    <li><a href="">Europe</a></li>
+                    <li><a href="">Australie</a></li>
+                    <li><a href="">Contacter le webmestre</a></li>
+                </ul>
+            </div>
+            <div class="titre-liste">
+                <h2>Termes et conditions</h2>
+                <ul>
+                    <li><a href="">Conditions utilisation</a></li>
+                    <li><a href="">Politique de confidentialité</a></li>
+                </ul>
+            </div>
+            <div class="titre-liste">
+                <h2>Newsletters</h2>
+                <form action="">
+                    <label for="">
+                        <input type="text">
+                    </label>
+                </form>
+            </div>
+        </div>
+        <div class="copyright-site">
+            <span>© Design réalisé en collaboration par Patricia, Marc-Olivier et Mathieu</span>
+            <div class="icones-boite">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
         </div>
     </footer>
 </body>
-
 </html>
