--- a/index.html
+++ b/index.html
@@ -5,39 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/import.css">
 </head>
 <body>
-    <nav>
-        <img src="" alt="">
+    <nav id="nav-principale">
         <div>
-            <img src="" alt="logo site web">
-            <label for="">
-                <input type="text">
-            </label>
-            <select name="devises" id=""></select>
-            <select name="langues" id=""></select>
-            <a href="">Messagerie</a>
-            <a href="">Enregistrement</a>
-            <a href="">Connection</a>
+            <img src="#" alt="logo site web">
+            <form action="index.html">
+                <label for="recherche">recherche
+                    <input type="text" placeholder="Recherche" id="recherche">
+                </label>
+            </form>
+            <label for="devises">Devise :</label>
+            <select name="devises" id="devises">
+                <option value="euros">Euros</option>
+                <option value="dollarCanadien" selected>Dollar canadien</option>
+                <option value="dollarUS">Dollar US</option>
+            </select>
+            <label for="langues">Langue :</label>
+            <select name="langues" id="langues">
+                <option value="français" selected>Français</option>
+                <option value="anglais">Anglais</option>
+            </select>
+            <a href="#">Messagerie</a>
+            <a href="#">Enregistrement</a>
+            <a href="#">Connection</a>
         </div>
         <ul>
-            <li><a href="">Enchères du moment</a></li>
-            <li><a href="">Actualités</a></li>
-            <li><a href="">Coup de coeur du lord</a></li>
-            <li><a href="">Archives</a></li>
+            <li><a href="#">Enchères du moment</a></li>
+            <li><a href="#">Actualités</a></li>
+            <li><a href="#">Coup de coeur du lord</a></li>
+            <li><a href="#">Archives</a></li>
         </ul>
-        <input type="checkbox" name="menu-mobile" id="">
+        <input type="checkbox" id="menu-mobile">
     </nav>
-    <main>
+    <main id="contenu-principale">
         <section class="galerie">
             <h2>Catalogue produits</h2>
-            <input type="checkbox" name="format-carte" id="">
-            <input type="checkbox" name="format-liste" id="">
+            <input type="checkbox" id="format-carte">
+            <input type="checkbox" id="format-liste">
             <article class="timbre">
                 <div class="img-avec-favoris">
-                    <img class="timbre-image" src="" alt="">
-                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
+                    <img class="timbre-image" src="#" alt="image d'un timbre">
+                    <input class="timbre-favoris" type="checkbox" name="favoris" id="favoris">
                 </div>
                 <div class="txt-enchere-ligne">
                     <p class="timbre-status">Enchères en cours</p>
@@ -52,175 +62,74 @@
                     <p class="timbre-prix" >Prix actuel : </p>
                     <p class="timbre-temps-restant">temps restant : </p>
                 </div>
-                <form action="">
-                    <label for="">
-                        <input type="text" name="Prix">
+                <form action="index.html">
+                    <label for="prix">
+                        <input type="text" name="prix" id="prix">
                     </label>
-                    <input type="submit" value="">
-                </form>
-            </article>
-            <article class="timbre">
-                <div class="img-avec-favoris">
-                    <img class="timbre-image" src="" alt="">
-                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
-                </div>
-                <div class="txt-enchere-ligne">
-                    <p class="timbre-status">Enchères en cours</p>
-                    <p class="timbre-lot">Lot n: 123456</p>
-                </div>
-                <div class="entete-enchere">
-                    <h3 class="timbre-titre">nom du timbres</h3>
-                    <p class="timbre-annee">1850-1890</p>
-                    <p class="timbre-etat">État : Neuf</p>
-                </div>
-                <div class="txt-enchere-ligne">
-                    <p class="timbre-prix" >Prix actuel : </p>
-                    <p class="timbre-temps-restant">temps restant : </p>
-                </div>
-                <form action="">
-                    <label for="">
-                        <input type="text" name="Prix">
-                    </label>
-                    <input type="submit" value="">
-                </form>
-            </article>
-            <article class="timbre">
-                <div class="img-avec-favoris">
-                    <img class="timbre-image" src="" alt="">
-                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
-                </div>
-                <div class="txt-enchere-ligne">
-                    <p class="timbre-status">Enchères en cours</p>
-                    <p class="timbre-lot">Lot n: 123456</p>
-                </div>
-                <div class="entete-enchere">
-                    <h3 class="timbre-titre">nom du timbres</h3>
-                    <p class="timbre-annee">1850-1890</p>
-                    <p class="timbre-etat">État : Neuf</p>
-                </div>
-                <div class="txt-enchere-ligne">
-                    <p class="timbre-prix" >Prix actuel : </p>
-                    <p class="timbre-temps-restant">temps restant : </p>
-                </div>
-                <form action="">
-                    <label for="">
-                        <input type="text" name="Prix">
-                    </label>
-                    <input type="submit" value="">
-                </form>
-            </article>
-            <article class="timbre">
-                <div class="img-avec-favoris">
-                    <img class="timbre-image" src="" alt="">
-                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
-                </div>
-                <div class="txt-enchere-ligne">
-                    <p class="timbre-status">Enchères en cours</p>
-                    <p class="timbre-lot">Lot n: 123456</p>
-                </div>
-                <div class="entete-enchere">
-                    <h3 class="timbre-titre">nom du timbres</h3>
-                    <p class="timbre-annee">1850-1890</p>
-                    <p class="timbre-etat">État : Neuf</p>
-                </div>
-                <div class="txt-enchere-ligne">
-                    <p class="timbre-prix" >Prix actuel : </p>
-                    <p class="timbre-temps-restant">temps restant : </p>
-                </div>
-                <form action="">
-                    <label for="">
-                        <input type="text" name="Prix">
-                    </label>
-                    <input type="submit" value="">
-                </form>
-            </article>
-            <article class="timbre">
-                <div class="img-avec-favoris">
-                    <img class="timbre-image" src="" alt="">
-                    <input class="timbre-favoris" type="checkbox" name="" id="favoris">
-                </div>
-                <div class="txt-enchere-ligne">
-                    <p class="timbre-status">Enchères en cours</p>
-                    <p class="timbre-lot">Lot n: 123456</p>
-                </div>
-                <div class="entete-enchere">
-                    <h3 class="timbre-titre">nom du timbres</h3>
-                    <p class="timbre-annee">1850-1890</p>
-                    <p class="timbre-etat">État : Neuf</p>
-                </div>
-                <div class="txt-enchere-ligne">
-                    <p class="timbre-prix" >Prix actuel : </p>
-                    <p class="timbre-temps-restant">temps restant : </p>
-                </div>
-                <form action="">
-                    <label for="">
-                        <input type="text" name="Prix">
-                    </label>
-                    <input type="submit" value="">
+                    <input type="submit" value="save">
                 </form>
             </article>
         </section>
         <aside>
         </aside>
-
     </main>
     <footer id="pied-page">
         <div class="plan-de-site">
             <div class="titre-liste">
                 <h2>Acheter</h2>
                 <ul>
-                    <li><a href="">État-Unis</a></li>
-                    <li><a href="">Afrique</a></li>
-                    <li><a href="">Asie</a></li>
-                    <li><a href="">Europe</a></li>
-                    <li><a href="">Russie</a></li>
-                    <li><a href="">Commonwealth Britannique</a></li>
-                    <li><a href="">Monde entier</a></li>
+                    <li><a href="#">État-Unis</a></li>
+                    <li><a href="#">Afrique</a></li>
+                    <li><a href="#">Asie</a></li>
+                    <li><a href="#">Europe</a></li>
+                    <li><a href="#">Russie</a></li>
+                    <li><a href="#">Commonwealth Britannique</a></li>
+                    <li><a href="#">Monde entier</a></li>
                 </ul>
             </div>
             <div class="titre-liste">
                 <h2>Services et ressources</h2>
                 <ul>
-                    <li><a href="">Vendre vos timbre</a></li>
-                    <li><a href="">Faire estimer vos timbres</a></li>
-                    <li><a href="">Contacter un spécialiste</a></li>
-                    <li><a href="">Embaucher un homme de milieu</a></li>
-                    <li><a href="">Évènement caritative</a></li>
-                    <li><a href="">Magasins</a></li>
-                    <li><a href="">Évènement prochains</a></li>
+                    <li><a href="#">Vendre vos timbre</a></li>
+                    <li><a href="#">Faire estimer vos timbres</a></li>
+                    <li><a href="#">Contacter un spécialiste</a></li>
+                    <li><a href="#">Embaucher un homme de milieu</a></li>
+                    <li><a href="#">Évènement caritative</a></li>
+                    <li><a href="#">Magasins</a></li>
+                    <li><a href="#">Évènement prochains</a></li>
                 </ul>
             </div>
             <div class="titre-liste">
                 <h2>Centre d'aide</h2>
                 <ul>
-                    <li><a href="">Profil</a></li>
-                    <li><a href="">Comment faire une offre</a></li>
-                    <li><a href="">Suivre une enchère</a></li>
-                    <li><a href="">Trouver l'enchère désirée</a></li>
+                    <li><a href="#">Profil</a></li>
+                    <li><a href="#">Comment faire une offre</a></li>
+                    <li><a href="#">Suivre une enchère</a></li>
+                    <li><a href="#">Trouver l'enchère désirée</a></li>
                 </ul>
             </div>
             <div class="titre-liste">
                 <h2>Contactez-nous</h2>
                 <ul>
-                    <li><a href="">Anglettere</a></li>
-                    <li><a href="">Les Amériques</a></li>
-                    <li><a href="">Europe</a></li>
-                    <li><a href="">Australie</a></li>
-                    <li><a href="">Contacter le webmestre</a></li>
+                    <li><a href="#">Anglettere</a></li>
+                    <li><a href="#">Les Amériques</a></li>
+                    <li><a href="#">Europe</a></li>
+                    <li><a href="#">Australie</a></li>
+                    <li><a href="#">Contacter le webmestre</a></li>
                 </ul>
             </div>
             <div class="titre-liste">
                 <h2>Termes et conditions</h2>
                 <ul>
-                    <li><a href="">Conditions utilisation</a></li>
-                    <li><a href="">Politique de confidentialité</a></li>
+                    <li><a href="#">Conditions utilisation</a></li>
+                    <li><a href="#">Politique de confidentialité</a></li>
                 </ul>
             </div>
             <div class="titre-liste">
                 <h2>Newsletters</h2>
-                <form action="">
-                    <label for="">
-                        <input type="text">
+                <form action="index.html">
+                    <label for="newsletters">
+                        <input type="text" name="newsletters" id="newsletters" placeholder="Entrez votre email">
                     </label>
                 </form>
             </div>
@@ -228,9 +137,9 @@
         <div class="copyright-site">
             <span>© Design réalisé en collaboration par Patricia, Marc-Olivier et Mathieu</span>
             <div class="icones-boite">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="#" alt="facebook">
+                <img src="#" alt="instagram">
+                <img src="#" alt="youtube">
             </div>
         </div>
     </footer>
